test/sematest/valid/empty_then_stmt.java

class Foo {
  public static void main(String[] args) {}
  public int test(int i) {
    if (i == 0)
      ;
    else
      return 42;
    return 0;
  }
}
