test/sematest/invalid/return_missing_on_path.java
class A {
  public static void main(String[] args) {

  }

  public int a(){
    if (3 == 4){
      return 3;
    } else {
      
    }
  }
}